# otus-cpp-basic-finalwork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: asset-manifest.json  config.js  index.html
client/static/css/: main.f72d4e2b.css
client/static/js/: main.b61b5ec2.js  main.b61b5ec2.js.LICENSE.txt
src/device_emulator/: device_emulator.cpp  device_emulator.hpp
src/device_emulator/helpers/: getMetadata.h  getRandomData.h
src/device_emulator/interfaces/: IBinaryMsg.h  IJsonMsg.cpp  IJsonMsg.h
src/research_tests/: json_test.hpp
src/research_tests/recursive_import/: interfaces.h  websocket.hpp
src/server/: clientList.h  server.cpp  server.hpp
